--- a/docs/README
+++ b/docs/README
@@ -2,7 +2,19 @@
 # About:
 # =====
 # The docs directory contains the workshop documentation.
+# Sphinx installed on Ubuntu 10.04
 #
 
 # Install notes:
 # =============
+sudo apt-get install python-sphinx
+sphinx-quickstart
+
+# Build Documentation:
+# ===================
+make html
+
+make latex
+cd _build/latex/
+make all-pdf
+
