install texlive-latex-base

--- a/docs/README
+++ b/docs/README
@@ -7,7 +7,7 @@
 
 # Install notes:
 # =============
-sudo apt-get install python-sphinx
+sudo apt-get install python-sphinx texlive-latex-base
 sphinx-quickstart
 
 # Build Documentation:
