- updated introduction - updated workshop at FOSS4G link - release and copyright year adjustments.

--- a/docs/README
+++ b/docs/README
@@ -7,7 +7,7 @@
 
 # Install notes:
 # =============
-sudo apt-get install python-sphinx texlive-latex-base
+sudo apt-get install python-sphinx texlive-full
 sphinx-quickstart
 
 # Build Documentation:
