--- a/docs/i18n/ja/LC_MESSAGES/latex.po
+++ b/docs/i18n/ja/LC_MESSAGES/latex.po
@@ -1,16 +1,24 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # 
+# Translators:
+# sanak <nagase@georepublic.co.jp>, 2013
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2013\n"
+"Project-Id-Version: Workshop\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-07 10:18\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2013-10-07 12:55\n"
+"PO-Revision-Date: 2013-10-20 15:06+0000\n"
+"Last-Translator: sanak <nagase@georepublic.co.jp>\n"
+"Language-Team: Japanese (http://www.transifex.com/projects/p/pgrouting-workshop/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: ja\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
+# f12d01f2b6d24474849ff5bfa182cba6
 #: ../../latex.rst:13
 msgid "pgRouting Workshop - Latex generation (doesn't include this page)"
-msgstr ""
+msgstr "pgRouting Workshop - Latex generation (doesn't include this page)"
