--- a/docs/i18n/fr/LC_MESSAGES/index.po
+++ b/docs/i18n/fr/LC_MESSAGES/index.po
@@ -1,27 +1,37 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # 
+# Translators:
+# tipiak <gksugamur8ol@z.vuegate.net>, 2013
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2013\n"
+"Project-Id-Version: Workshop\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-07 10:18\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2013-10-07 12:55\n"
+"PO-Revision-Date: 2013-10-17 14:01+0000\n"
+"Last-Translator: tipiak <gksugamur8ol@z.vuegate.net>\n"
+"Language-Team: French (http://www.transifex.com/projects/p/pgrouting-workshop/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fr\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+# eafc554cee9a4eb19914dfc944ce2db4
 #: ../../index.rst:13
 msgid "pgRouting Workshop Manual"
-msgstr ""
+msgstr "Manuel de pgRouting Workshop"
 
+# b55759839907407fb2c07ca11c8f790d
 #: ../../index.rst:15
 msgid ""
 "*\"FOSS4G routing with pgRouting, OpenStreetMap road data and OpenLayers "
 "3\"*, primarly written for the `FOSS4G2013 Workshop "
 "<http://2013.foss4g.org/conf/programme/workshops/16/>`_."
-msgstr ""
+msgstr "*\"FOSS4G fonctionne avec pgRouting, OpenStreetMap road data and OpenLayers 3\"*, principalement écrit pour l'atelier `FOSS4G2013 <http://2013.foss4g.org/conf/programme/workshops/16/>`_."
 
+# c42043cb0e124462b6ff82955222f50b
 #: ../../index.rst:18
 msgid "Contents"
-msgstr ""
+msgstr "Contenu"
