pulled changes from Transifex

--- a/docs/i18n/es/LC_MESSAGES/latex.po
+++ b/docs/i18n/es/LC_MESSAGES/latex.po
@@ -1,16 +1,24 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # 
+# Translators:
+# Celia Virginia Vergara Castillo, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2013\n"
+"Project-Id-Version: Workshop\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-07 10:18\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2013-10-29 23:39\n"
+"PO-Revision-Date: 2014-11-07 18:38+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo\n"
+"Language-Team: Spanish (http://www.transifex.com/projects/p/pgrouting-workshop/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+# f12d01f2b6d24474849ff5bfa182cba6
 #: ../../latex.rst:13
 msgid "pgRouting Workshop - Latex generation (doesn't include this page)"
-msgstr ""
+msgstr "Taller de pgRouting - generación de latex (no incluye esta página)"
