--- a/docs/i18n/es/LC_MESSAGES/index.po
+++ b/docs/i18n/es/LC_MESSAGES/index.po
@@ -1,27 +1,37 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # 
+# Translators:
+# Celia Virginia Vergara Castillo, 2014
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2013\n"
+"Project-Id-Version: Workshop\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-07 10:18\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2013-10-29 23:39\n"
+"PO-Revision-Date: 2014-05-13 17:50+0000\n"
+"Last-Translator: Celia Virginia Vergara Castillo\n"
+"Language-Team: Spanish (http://www.transifex.com/projects/p/pgrouting-workshop/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+# eafc554cee9a4eb19914dfc944ce2db4
 #: ../../index.rst:13
 msgid "pgRouting Workshop Manual"
-msgstr ""
+msgstr " Manual del taller de pgRouting"
 
+# b55759839907407fb2c07ca11c8f790d
 #: ../../index.rst:15
 msgid ""
 "*\"FOSS4G routing with pgRouting, OpenStreetMap road data and OpenLayers "
 "3\"*, primarly written for the `FOSS4G2013 Workshop "
 "<http://2013.foss4g.org/conf/programme/workshops/16/>`_."
-msgstr ""
+msgstr "*\"FOSS4G enrutamiento con pgRouting, datos de calles de OpenStreetMap y OpenLayers 3\"*, principalmente escrito para el `Taller FOSS4G2013 <http://2013.foss4g.org/conf/programme/workshops/16/>`_."
 
+# c42043cb0e124462b6ff82955222f50b
 #: ../../index.rst:18
 msgid "Contents"
-msgstr ""
+msgstr "Contenido"
