--- a/docs/i18n/pot/index.pot
+++ b/docs/i18n/pot/index.pot
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# Copyright (C) 2010-2014 Daniel Kastl, Frédéric Junod
 # This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2013\n"
+"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2014\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-29 23:39\n"
+"POT-Creation-Date: 2014-11-10 09:37+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,17 +17,17 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../../index.rst:13
-# eafc554cee9a4eb19914dfc944ce2db4
+# 4893480a474f4334a1028d2d1174a03b
 msgid "pgRouting Workshop Manual"
 msgstr ""
 
 #: ../../index.rst:15
-# b55759839907407fb2c07ca11c8f790d
-msgid "*\"FOSS4G routing with pgRouting, OpenStreetMap road data and OpenLayers 3\"*, primarly written for the `FOSS4G2013 Workshop <http://2013.foss4g.org/conf/programme/workshops/16/>`_."
+# b9877258f94e41b6b18d58e6773b49de
+msgid "*\"FOSS4G routing with pgRouting, OpenStreetMap road data and OpenLayers 3\"*."
 msgstr ""
 
 #: ../../index.rst:18
-# c42043cb0e124462b6ff82955222f50b
+# f63cecb0b935411997f0caa09747040f
 msgid "Contents"
 msgstr ""
 
