--- a/docs/i18n/pot/latex.pot
+++ b/docs/i18n/pot/latex.pot
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# Copyright (C) 2010-2014 Daniel Kastl, Frédéric Junod
 # This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2013\n"
+"Project-Id-Version: Workshop - FOSS4G routing with pgRouting 2014\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-29 23:39\n"
+"POT-Creation-Date: 2014-11-10 09:37+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../../latex.rst:13
-# f12d01f2b6d24474849ff5bfa182cba6
+# 684af824be144c748651ea7a675f831c
 msgid "pgRouting Workshop - Latex generation (doesn't include this page)"
 msgstr ""
 
