--- a/docs/i18n/es/LC_MESSAGES/latex.po
+++ b/docs/i18n/es/LC_MESSAGES/latex.po
@@ -1,5 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2013 Hal Seki, Yves Jacolin, Daniel Kastl, Frédéric Junod
+# Copyright (C) 2010-2014 Daniel Kastl, Frédéric Junod
 # This file is distributed under the same license as the Workshop - FOSS4G routing with pgRouting package.
 # 
 # Translators:
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-10-29 23:39\n"
+"POT-Creation-Date: 2014-11-10 09:37+0900\n"
 "PO-Revision-Date: 2014-11-07 18:38+0000\n"
 "Last-Translator: Celia Virginia Vergara Castillo\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/pgrouting-workshop/language/es/)\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-# f12d01f2b6d24474849ff5bfa182cba6
+# 684af824be144c748651ea7a675f831c
 #: ../../latex.rst:13
 msgid "pgRouting Workshop - Latex generation (doesn't include this page)"
 msgstr "Taller de pgRouting - generación de latex (no incluye esta página)"
