--- a/locale/es/LC_MESSAGES/index.po
+++ b/locale/es/LC_MESSAGES/index.po
@@ -1,11 +1,12 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2010-2021 Daniel Kastl, Vicky Vergara
-# This file is distributed under the same license as the Workshop FOSS4G Argentina package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# This file is distributed under the same license as the Workshop FOSS4G
+# Argentina package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 # 
 # Translators:
-# Vicky Vergara <vicky@georepublic.de>, 2018
-# Carmen Castro <carmengabrielacastro@gmail.com>, 2021
+# Vicky Vergara <vicky@georepublic.de>, 2021
+# MarPetra <mvergaratrejo@gmail.com>, 2021
 # 
 #, fuzzy
 msgid ""
@@ -13,12 +14,13 @@ msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-04-19 13:37-0500\n"
-"PO-Revision-Date: 2018-10-04 21:31+0000\n"
-"Last-Translator: Carmen Castro <carmengabrielacastro@gmail.com>, 2021\n"
+"PO-Revision-Date: 2021-04-23 15:22+0000\n"
+"Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.8.0\n"
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -36,4 +38,4 @@ msgstr "Taller"
 
 #: ../../build/docs/index.rst:36
 msgid "Appendices"
-msgstr ""
+msgstr "Apéndices"
