--- a/locale/es/LC_MESSAGES/index.po
+++ b/locale/es/LC_MESSAGES/index.po
@@ -5,37 +5,57 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 # 
 # Translators:
-# Vicky Vergara <vicky@georepublic.de>, 2021
 # MarPetra <mvergaratrejo@gmail.com>, 2021
+# Vicky Vergara <vicky@georepublic.de>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Argentina 2.7\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-19 13:37-0500\n"
+"POT-Creation-Date: 2021-10-10 17:38+0000\n"
 "PO-Revision-Date: 2021-04-23 15:22+0000\n"
-"Last-Translator: MarPetra <mvergaratrejo@gmail.com>, 2021\n"
+"Last-Translator: Vicky Vergara <vicky@georepublic.de>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/pgrouting/teams/1219/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.8.0\n"
+"Generated-By: Babel 2.9.1\n"
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ../../build/docs/index.rst:13
+#: ../../build/docs/index.rst:11
 msgid "pgRouting Workshop"
 msgstr "Taller de pgRouting"
 
-#: ../../build/docs/index.rst:15
+#: ../../build/docs/index.rst:13
 msgid "*\"FOSS4G routing with pgRouting\"*."
 msgstr "*\"FOSS4G ruteo con pgRouting\"*."
 
-#: ../../build/docs/index.rst:17
-msgid "Workshop"
-msgstr "Taller"
+#: ../../build/docs/index.rst:16
+msgid "Workshop introduction"
+msgstr "Introducción al taller"
 
-#: ../../build/docs/index.rst:36
+#: ../../build/docs/index.rst:27
+msgid "Basic"
+msgstr "Básico"
+
+#: ../../build/docs/index.rst:41
+msgid "Advanced"
+msgstr "Avanzado"
+
+#: ../../build/docs/index.rst:49
+msgid "United Nations Sustainable Development Goals"
+msgstr "Objetivos de Desarrollo Sostenible de las Naciones Unidas"
+
+#: ../../build/docs/index.rst:63
+msgid "Interaction with other software"
+msgstr "Interacción con otro software"
+
+#: ../../build/docs/index.rst:74
+msgid "Examples from the Internet"
+msgstr "Ejemplos de Internet"
+
+#: ../../build/docs/index.rst:85
 msgid "Appendices"
 msgstr "Apéndices"
